# wtf-cli

./: .gitignore  Cargo.toml  README.md  quickcmd.plugin.zsh
.github/workflows/: release.yml
src/: main.rs
